--- a/src/db.properties
+++ b/src/db.properties
@@ -1,4 +1,4 @@
-url=jdbc:mysql://localhost:3306/laolei?useUnicode=true&characterEncoding=utf8
+url=jdbc:mysql://localhost:3306/contact?useUnicode=true&characterEncoding=utf8
 userName=root
 password=123456
 driverClass=com.mysql.jdbc.Driver
