--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -27,6 +27,10 @@
         <servlet-name>UpdateContact</servlet-name>
         <servlet-class>cn.laolei.contact.servlet.UpdateContact</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Register</servlet-name>
+        <servlet-class>cn.laolei.contact.servlet.Register</servlet-class>
+    </servlet>
 
     <servlet-mapping>
         <servlet-name>DealLogin</servlet-name>
@@ -51,5 +55,9 @@
     <servlet-mapping>
         <servlet-name>UpdateContact</servlet-name>
         <url-pattern>/UpdateContact</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Register</servlet-name>
+        <url-pattern>/Register</url-pattern>
     </servlet-mapping>
 </web-app>
